<resources>
    <string name="app_name">MobileAuthentication</string>
    <string name="upload_profile">upload profile</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email address</string>
    <string name="submit">submit</string>
    <string name="please_wait">Please Wait...</string>
    <string name="continue1">CONTINUE</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code</string>
    <string name="phone_number">Phone Number</string>

</resources>