<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:gravity="center">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_border"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLength="36"
            android:paddingStart="10dp"
            android:textColorHint="@color/grey_40"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_border"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLength="36"
            android:paddingStart="10dp"
            android:textColorHint="@color/grey_40"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edt_mobNo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_border"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:textColorHint="@color/grey_40"
            android:textColor="@color/black"/>



        <!--profile pic-->
        <LinearLayout
            android:id="@+id/linear_upload_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/btn_upload_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_profile"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_rounded_red"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_rounded_red"/>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>