<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/img_number_verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Verify Your Number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/please_enter_your_mobile_number_to_receive_a_verification_code"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60"
            android:layout_marginBottom="20dp"/>

        <Spinner
            android:id="@+id/spn_countries"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="start"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:editable="false"
                android:focusable="false"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="5dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_90">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonContinue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/continue1"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>